--- a/ex001.html
+++ b/ex001.html
@@ -51,7 +51,7 @@
                 </div>
                 <div id="coluna2">
                     <div><a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1>PROJECT T.I.</h1> <p>HTML CSS JAVASCRIPT</p></div>
-                    <div><a href=""><img src="Imagens/2023-06-27 (2).png" alt="mapamental4" id="linha2"></a> <h1 class="linha4">PROJECT PORTFOLIO</h1> <p class="linha4">HTML CSS</p></div>
+                    <div><a href="https://gabrilinard.github.io/Portfolio/ex001" target="_blank"><img src="Imagens/2023-06-27 (2).png" alt="mapamental4" id="linha2"></a> <h1 class="linha4">PROJECT PORTFOLIO</h1> <p class="linha4">HTML CSS</p></div>
                 </div>
             </div>
         </aside>
