--- a/ex001.html
+++ b/ex001.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>gabrilinard</h1>
+        <h1>Gabriel Linard</h1>
         <div class="icons">
             <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
             <a href="https://wa.me/+5586994273418"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
@@ -22,7 +22,7 @@
         <article>
             <h1>Nice to meet you!</h1>
             <h2>I'm <b class="b1">Gabriel Linard</b>.</h2>
-            <h3>Based in the Brazil, I'm a front-end and <br> backend developer passionate about <br> building cute and cool web app that <br> users love. I study software engineering <br> at one of the best colleges in Piauí and <br> I'm a big fan of the area.</h3>
+            <h3>Based in the Brazil, I'm a front-end and <br> backend developer passionate about <br> building cute and cool web app that <br> users love. I study software engineering <br> at one of the best colleges in Piauí called <br> ICEV and I'm a big fan of the area.</h3>
             <h4><b class="b2" style="padding-bottom: 9px;">CONTACT ME</b></h4>
             <hr>
         </article>
