--- a/ex001.html
+++ b/ex001.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gabrilinard</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="mq.style.css">
 
 </head>
 <body>
