--- a/ex001.html
+++ b/ex001.html
@@ -27,7 +27,7 @@
             <h4><b class="b2" style="padding-bottom: 9px;">CONTACT ME</b></h4>
             <hr>
         </article>
-        <table id="tabela1">
+        <table id="skills">
             <tr>
                 <td><h1>Html</h1><p>6 Months Knowledge</p></td>
                 <td><h1>Css</h1><p id="i1">6 Months Knowledge</p></td>
@@ -47,12 +47,12 @@
             </div>
             <div id="imagens">
                 <div id="coluna1">
-                    <div>><a href="https://gabrilinard.github.io/projeto-medico/" target="_blank"><img src="Imagens/2023-06-21.png" alt="mapamental1" id="linha1"></a> <h1 class="linha5">MEDICAL STYLE WEBSITE</h1><p class="linha5">HTML CSS JAVASCRIPT</p></div>
+                    <div><a href="https://gabrilinard.github.io/projeto-medico/" target="_blank"><img src="Imagens/2023-06-21.png" alt="mapamental1" id="linha1"></a> <h1 class="linha5">MEDICAL STYLE WEBSITE</h1><p class="linha5">HTML CSS JAVASCRIPT</p></div>
                     <div><a href="https://gabrilinard.github.io/projeto-login/" target="_blank"><img src="Imagens/2023-06-26 (4).png" alt="mapamental2" id="linha4"></a> <h1 class="linha6">SIMULATOR WEBSITE WITH LOGINS</h1><p class="linha6">HTML CSS JAVASCRIPT</p></div>
                 </div>
                 <div id="coluna2">
                     <div><a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1>PROJECT T.I.</h1> <p>HTML CSS JAVASCRIPT</p></div>
-                    <div><a href="https://gabrilinard.github.io/Portfolio/ex001" target="_blank"><img src="Imagens/2023-06-27 (2).png" alt="mapamental4" id="linha2"></a> <h1 class="linha4">PROJECT PORTFOLIO</h1> <p class="linha4">HTML CSS</p></div>
+                    <div><a href="https://gabrilinard.github.io/Portfolio/ex001" target="_blank"><img src="Imagens/2023-06-27 .png" alt="mapamental4" id="linha2"></a> <h1 class="linha4">PROJECT PORTFOLIO</h1> <p class="linha4">HTML CSS</p></div>
                 </div>
             </div>
         </aside>
@@ -67,7 +67,7 @@
                         <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
                            <a href="https://wa.me/+5586994273418" target="_blank"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%"></a>
                            <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;"></a>
-                    </div>1
+                    </div>
     </div>  
             <div class="footer">
                  <img src="Imagens/IMG_20230627_160730_512.webp" alt="fotoextra" class="imgextra">
