--- a/ex001.html
+++ b/ex001.html
@@ -51,7 +51,7 @@
                     <div><a href="https://gabrilinard.github.io/projeto-login/" target="_blank"><img src="Imagens/2023-06-26 (4).png" alt="mapamental2" id="linha4"></a> <h1 class="linha6">SIMULATOR WEBSITE WITH LOGINS</h1><p class="linha6">HTML CSS JAVASCRIPT</p></div>
                 </div>
                 <div id="coluna2">
-                    <div><a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1>PROJECT T.I.</h1> <p>HTML CSS JAVASCRIPT</p></div>
+                    <div id="div2"><a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1 class="linha3">PROJECT T.I.</h1> <p class="linha3">HTML CSS JAVASCRIPT</p></div>
                     <div><a href="https://gabrilinard.github.io/Portfolio/ex001" target="_blank"><img src="Imagens/2023-06-27 .png" alt="mapamental4" id="linha2"></a> <h1 class="linha4">PROJECT PORTFOLIO</h1> <p class="linha4">HTML CSS</p></div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
         <div id="geral">
         <div>
                 <h1>CONTACT</h1>
-                    <p>I would love to hear about your project and how I <br> could help. Please fill in the form, and I'II get back <br> to you as soonas possible.</p>
+                    <p>I would love to hear about your project and how I could help. Please fill in the form, and I'II get back to you as soonas possible.</p>
                     <div class="imagens">
                         <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
                            <a href="https://wa.me/+5586994273418" target="_blank"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%"></a>
