--- a/ex001.html
+++ b/ex001.html
@@ -13,11 +13,11 @@
     <header>
         <h1>Gabriel Linard</h1>
         <div class="icons">
-            <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
-            <a href="https://wa.me/+5586994273418"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
-            <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;"></a>
-            <img src="Imagens/IMG_20230626_184615_077.webp" alt="ftpretoembranco" id="imgprincipal">
+            <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;" class="img1"></a>
+            <a href="https://wa.me/+5586994273418"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%;" class="img1"></a>
+            <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;" class="img1"></a> 
         </div>
+        <img src="Imagens/IMG_20230626_184615_077.webp" alt="ftpretoembranco" id="imgprincipal">
     </header>
     <main>
         <article>
