--- a/ex001.html
+++ b/ex001.html
@@ -13,9 +13,9 @@
     <header>
         <h1>Gabriel Linard</h1>
         <div class="icons">
-            <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;" class="img1"></a>
-            <a href="https://wa.me/+5586994273418"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%;" class="img1"></a>
-            <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;" class="img1"></a> 
+                <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
+                <a href="https://wa.me/+5586994273418"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
+                <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;"></a>
         </div>
         <img src="Imagens/IMG_20230626_184615_077.webp" alt="ftpretoembranco" id="imgprincipal">
     </header>
@@ -27,32 +27,31 @@
             <h4><b class="b2" style="padding-bottom: 9px;">CONTACT ME</b></h4>
             <hr>
         </article>
-        <table id="skills">
-            <tr>
-                <td><h1>Html</h1><p>6 Months Knowledge</p></td>
-                <td><h1>Css</h1><p id="i1">6 Months Knowledge</p></td>
-                <td><h1>Javascript</h1><p>6 Months Knowledge</p></td>
-            </tr>
-            <tr><td><h1>Accessibility</h1><p>1 Year Experience</p></td>
-                <td><h1>Software <br> Engineering</h1><p>6 Months Knowledge</p></td>
-                <td><h1>Python</h1><p>6 Months Knowledge</p></td>
-            </tr>
-        </table>
+    
+                <div id="skills">
+                        <div><h1>Html</h1><p>6 Months Knowledge</p></div>
+                        <div><h1>Css</h1><p>6 Months Knowledge</p></div>
+                        <div><h1>Javascript</h1><p>6 Months Knowledge</p></div>
+                        <div><h1>Accessibility</h1><p>1 Year Experience</p></div>
+                        <div><h1>Software <br> Engineering</h1><p>6 Months Knowledge</p></div>
+                        <div><h1>Python</h1><p>6 Months Knowledge</p></div>
+
+        </div>
         <aside>
             <div id="tabela2">
-                    <div id="h1">
+                    <div>
                         <h1>Projects</h1>
                     </div>
-                    <b class="b3" style="padding-bottom: 9px;">CONTACT ME</b>
+                    <div><b class="b3" style="padding-bottom: 7px;">CONTACT ME</b></div>
             </div>
             <div id="imagens">
                 <div id="coluna1">
-                    <div><a href="https://gabrilinard.github.io/projeto-medico/" target="_blank"><img src="Imagens/2023-06-21.png" alt="mapamental1" id="linha1"></a> <h1 class="linha5">MEDICAL STYLE WEBSITE</h1><p class="linha5">HTML CSS JAVASCRIPT</p></div>
-                    <div><a href="https://gabrilinard.github.io/projeto-login/" target="_blank"><img src="Imagens/2023-06-26 (4).png" alt="mapamental2" id="linha2"></a> <h1 class="linha6">SIMULATOR WEBSITE WITH LOGINS</h1><p class="linha6">HTML CSS JAVASCRIPT</p></div>
+                    <div  id="div1"><a href="https://gabrilinard.github.io/projeto-medico/" target="_blank"><img src="Imagens/2023-06-21.png" alt="mapamental1" id="linha1"></a> <h1 class="linha5">MEDICAL STYLE WEBSITE</h1><p class="linha5">HTML CSS JAVASCRIPT</p></div>
+                    <div><a href="https://gabrilinard.github.io/projeto-login/" target="_blank"><img src="Imagens/2023-06-26 (4).png" alt="mapamental2" id="linha4"></a> <h1 class="linha6">SIMULATOR WEBSITE WITH LOGINS</h1><p class="linha6">HTML CSS JAVASCRIPT</p></div>
                 </div>
                 <div id="coluna2">
                     <div id="div2"><a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1 class="linha3">PROJECT T.I.</h1> <p class="linha3">HTML CSS JAVASCRIPT</p></div>
-                    <div><a href="https://gabrilinard.github.io/Portfolio/ex001" target="_blank"><img src="Imagens/2023-06-27 .png" alt="mapamental4" id="linha4"></a> <h1 class="linha4">PROJECT PORTFOLIO</h1> <p class="linha4">HTML CSS</p></div>
+                    <div><a href="https://gabrilinard.github.io/Portfolio/ex001" target="_blank"><img src="Imagens/2023-06-27 .png" alt="mapamental4" id="linha2"></a> <h1 class="linha4">PROJECT PORTFOLIO</h1> <p class="linha4">HTML CSS</p></div>
                 </div>
             </div>
         </aside>
@@ -62,7 +61,7 @@
         <div id="geral">
         <div>
                 <h1>CONTACT</h1>
-                    <p>I would love to hear about your project and how I could help. Please fill in the form, and I'II get back to you as soonas possible.</p>
+                    <p>I would love to hear about your project and how I <br> could help. Please fill in the form, and I'II get back <br> to you as soonas possible.</p>
                     <div class="imagens">
                         <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
                            <a href="https://wa.me/+5586994273418" target="_blank"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%"></a>
