--- a/ex001.html
+++ b/ex001.html
@@ -42,7 +42,7 @@
                     <div>
                         <h1>Projects</h1>
                     </div>
-                    <div><b class="b3" style="padding-bottom: 7px;">CONTACT ME</b></div>
+                    <div id="b"><b class="b3" style="padding-bottom: 7px;">CONTACT ME</b></div>
             </div>
             <div id="imagens">
                 <div id="coluna1">
