--- a/ex001.html
+++ b/ex001.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <div class="principal">
+            <h1 class="h1">Gabrilinard</h1>
             <div id="div1">
-                <h1>Gabrilinard</h1>
                 <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
                 <a href="https://wa.me/+5586994273418"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
                 <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;"></a>
@@ -25,7 +25,7 @@
             <div id="div3">
                 <h1>Nice to meet you!</h1>
                 <h2>I'm <b class="b1">Gabriel Linard</b>.</h2>
-                <p>Based in the Brazil, I'm a front-end and <br> backend developer passionate about <br> building cute and cool web app that <br> users love. I study software engineering <br> at one of the best colleges in Piauí called <br> ICEV and I'm a big fan of the area.</p>
+                <p>Based in the Brazil, I'm a front-end and backend developer passionate about building cute and cool web app that users love. I study software engineering at one of the best colleges in Piauí called ICEV and I'm a big fan of the area. I took some courses in the area and I have five certificates. One of javascript, another of algorithms and three of HTML and CSS</p>
                 <h3><b class="b2" style="padding-bottom: 9px;">CONTACT ME</b></h>
             </div>  
         </div>
