--- a/ex001.html
+++ b/ex001.html
@@ -7,6 +7,7 @@
     <title>gabrilinard</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="mq.style.css">
+    <link rel="shortcut icon" href="../Portfolio/Imagens/portfolio.png" type="image/x-icon">
 
 </head>
 <body>
@@ -56,7 +57,7 @@
                 </div>
                 <div class ="linha2">
                     <a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1 class="linha7">PROJECT T.I.</h1> <p class="linha7">HTML CSS JAVASCRIPT</p>
-                    <a href="https://gabrilinard.github.io/Portfolio/ex001" target="_blank"><img src="Imagens/2023-06-27 .png" alt="mapamental4" id="linha4"></a> <h1 class="linha8">PROJECT PORTFOLIO</h1> <p class="linha8">HTML CSS</p>
+                    <a href="https://gabrilinard.github.io/Portfolio/ex001" target="_blank"><img src="Imagens/2023-07-02 (2).png" alt="mapamental4" id="linha4"></a> <h1 class="linha8">PROJECT PORTFOLIO</h1> <p class="linha8">HTML CSS</p>
                 </div>
             </div>
         </aside>
