--- a/ex001.html
+++ b/ex001.html
@@ -20,9 +20,10 @@
                 <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;"></a>
             </div>
 
-            <div id="div2">
+            <picture>
+                <img src="Imagens/IMG_20230702_163223_577 (2).jpg" alt="ftextra" id="ftextra">
                 <img src="Imagens/IMG_20230626_184615_077.webp" alt="ftpretoembranco" id="imgprincipal"> 
-            </div> 
+            </picture> 
             <div id="div3">
                 <h1>Nice to meet you!</h1>
                 <h2>I'm <b class="b1">Gabriel Linard</b>.</h2>
