--- a/ex001.html
+++ b/ex001.html
@@ -27,8 +27,10 @@
             <div id="div3">
                 <h1>Nice to meet you!</h1>
                 <h2>I'm <b class="b1">Gabriel Linard</b>.</h2>
-                <p>Based in the Brazil, I'm a front-end and backend developer passionate about building cute and cool web app that users love. I study software engineering at one of the best colleges in Piauí called ICEV and I'm a big fan of the area. I took some courses in the area and I have five certificates. One of javascript, another of algorithms and three of HTML and CSS</p>
-                <h3><b class="b2" style="padding-bottom: 5px;">CONTACT ME</b></h>
+                <div class="paragrafo">
+                    <p>Based in the Brazil, I'm a front-end and backend developer passionate about building cute and cool web app that users love. I study software engineering at one of the best colleges in Piauí called ICEV and I'm a big fan of the area. I took some courses in the area and I have five certificates. One of javascript, another of algorithms and three of HTML and CSS</p>
+                    <h3><b class="b2" style="padding-bottom: 5px;">CONTACT ME</b></h3>
+                </div>
             </div>  
         </div>
     </header>
