--- a/ex001.html
+++ b/ex001.html
@@ -25,7 +25,7 @@
 
             <picture>
                 <img src="Imagens/801a045e-51ac-4970-8862-74fbf085f4b8.jpg" alt="ftextra" id="ftextra">
-                <img src="Imagens/801a045e-51ac-4970-8862-74fbf085f4b8.jpg" alt="ftpretoembranco" id="imgprincipal"> 
+                <img src="Imagens/IMG_20230626_184615_077.webp" alt="ftpretoembranco" id="imgprincipal"> 
             </picture>
             
             
