--- a/ex001.html
+++ b/ex001.html
@@ -32,7 +32,7 @@
             <div id="div3">
                 <h1>Nice to meet you!</h1>
                 <h2>I'm <b class="b1">Gabriel Linard</b>.</h2>
-                <p>Based in the Brazil, I'm a front-end and backend developer passionate about building cute and cool web app that users love. I study software engineering at one of the best colleges in Piauí called ICEV and I'm a big fan of the area. I took some courses in the area and I have five certificates. One of javascript, another of algorithms and three of HTML and CSS</p>
+                <p>Based in the Brazil, I'm a front-end and backend developer passionate about building cute and cool web app that users love. I study software engineering at one of the best colleges in Piauí called ICEV and I'm a big fan of the area. I took some courses in the area and I have eight certificates. One of javascript, one of algorithms, four of HTML and CSS, one of Java POO, one of mysql. In search of more learning.  </p>
                 <h3><b class="b2" style="padding-bottom: 9px;">CONTACT ME</b></h3>
             </div>  
         </div>
@@ -56,9 +56,8 @@
         <aside>
             <div id="tabela2">
                     <div>
-                        <h1>Projects</h1>
+                        <h1><b class="b3">Projects</b></h1>
                     </div>
-                    <div id="b"><b class="b3" style="padding-bottom: 7px;">CONTACT ME</b></div>
             </div>
 
 
