--- a/ex001.html
+++ b/ex001.html
@@ -11,29 +11,23 @@
 
 </head>
 <body>
-    <header>
-        <div class="principal">
+    <nav>
+        <a href="https://www.linkedin.com/in/gabriel-linard-380458268" target="_blank"><img src="Imagens/fotolinkedin.png" alt="linkdln.png" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
+        <a href="https://wa.me/+5586994273418"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
+        <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;"></a>
+        <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;"></a>
+</nav>
 
-            <h1 class="h1">Gabrilinard</h1>
-
-
-            <div id="div1">
-                <a href="https://github.com/Gabrilinard" target="_blank"><img src="Imagens/github.pmg.png" alt="githubpng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
-                <a href="https://wa.me/+5586994273418"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%;"></a>
-                <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;"></a>
-            </div>
-
-            <picture>
-                <img src="Imagens/801a045e-51ac-4970-8862-74fbf085f4b8.jpg" alt="ftextra" id="ftextra">
-                <img src="Imagens/IMG_20230626_184615_077.webp" alt="ftpretoembranco" id="imgprincipal"> 
-            </picture>
+            <header>
+                <div class="principal">
+                    <picture>
+                        <img src="Imagens/801a045e-51ac-4970-8862-74fbf085f4b8.jpg" alt="ftpretoembranco" id="imgprincipal"> 
+                    </picture>
             
             
             <div id="div3">
-                <h1>Nice to meet you!</h1>
-                <h2>I'm <b class="b1">Gabriel Linard</b>.</h2>
-                <p>Based in the Brazil, I'm a front-end and backend developer passionate about building cute and cool web app that users love. I study software engineering at one of the best colleges in Piauí called ICEV and I'm a big fan of the area. I took some courses in the area and I have eight certificates. One of javascript, one of algorithms, four of HTML and CSS, one of Java POO, one of mysql. In search of more learning.  </p>
-                <h3><b class="b2" style="padding-bottom: 9px;">CONTACT ME</b></h3>
+                <h1>Nice to meet you! <br> I'am <b class="b1">Gabriel Linard</b></h1>
+                <p>Based in the Brazil, I'm a front-end developer passionate about building cute and cool web app that users love. I study software engineering at one of the best colleges in Piauí called ICEV and I'm a big fan of the area. I took some courses in the area and I have eight certificates. One of javascript, one of algorithms, four of HTML and CSS, one of Java POO, one of mysql. In search of more learning. </p>
             </div>  
         </div>
     </header>
@@ -43,12 +37,12 @@
 
 
                 <div id="skills">
-                        <div><h1>Html</h1><p>10 Months Knowledge</p></div>
-                        <div><h1>Css</h1><p>10 Months Knowledge</p></div>
-                        <div><h1>Javascript</h1><p>10 Months Knowledge</p></div>
-                        <div><h1>Accessibility</h1><p>1 Year Experience</p></div>
-                        <div><h1>Software<br> Engineering</h1><p>10 Months Knowledge</p></div>
-                        <div><h1>Java</h1><p>10 Months Knowledge</p></div>
+                        <div><h1>Html</h1><p>1 Year Knowledge</p></div>
+                        <div><h1>Css</h1><p>1 Year Knowledge</p></div>
+                        <div><h1>Javascript</h1><p>1 Year Knowledge</p></div>
+                        <div><h1>React </h1><p>2 Months Knowledge</p></div>
+                        <div><h1>Software<br> Engineering</h1><p>1 Year Knowledge</p></div>
+                        <div><h1>Java</h1><p>1 Year Knowledge</p></div>
 
         </div>
 
@@ -63,12 +57,12 @@
 
             <div id="imagens">
                 <div class = "linha1">
-                    <a href="https://gabrilinard.github.io/projeto-medico/" target="_blank"><img src="Imagens/2023-06-21.png" alt="mapamental1" id="linha1"></a> <h1 class="linha5">MEDICAL STYLE WEBSITE</h1><p class="linha5">HTML CSS JAVASCRIPT</p>
-                    <a href="https://gabrilinard.github.io/projeto-login/" target="_blank"><img src="Imagens/2023-06-26 (4).png" alt="mapamental2" id="linha2"></a> <h1 class="linha6">SIMULATOR WEBSITE WITH LOGINS</h1><p class="linha6">HTML CSS JAVASCRIPT</p>
+                    <a href="https://gabrilinard.github.io/projeto-medico/" target="_blank"><img src="Imagens/2023-06-21.png" alt="mapamental1" id="linha1"></a> <h1 class="linha5">MEDICAL STYLE WEBSITE</h1>
+                    <a href="https://gabrilinard.github.io/projeto-login/" target="_blank"><img src="Imagens/2023-06-26 (4).png" alt="mapamental2" id="linha2"></a> <h1 class="linha6">SIMULATOR WEBSITE WITH LOGINS</h1>
                 </div>
                 <div class ="linha2">
-                    <a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1 class="linha7">PROJECT T.I.</h1> <p class="linha7">HTML CSS JAVASCRIPT</p>
-                    <a href="https://gabrilinard.github.io/Portfolio/ex001" target="_blank"><img src="Imagens/2023-07-02 (2).png" alt="mapamental4" id="linha4"></a> <h1 class="linha8">PROJECT PORTFOLIO</h1> <p class="linha8">HTML CSS</p>
+                    <a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1 class="linha7">PROJECT T.I.</h1>
+                    <a href="https://github.com/Gabrilinard/Game" target="_blank"><img src="Imagens/Captura de Tela (2).png" alt="mapamental4" id="linha4"></a> <h1 class="linha8">Secret Word</h1>
                 </div>
             </div>
         </aside>
