--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 
                 <div id="skills">
-                        <div><h1>Html</h1><p>1 Year Knowledge</p></div>
-                        <div><h1>Css</h1><p>1 Year Knowledge</p></div>
-                        <div><h1>Javascript</h1><p>1 Year Knowledge</p></div>
-                        <div><h1>React </h1><p>2 Months Knowledge</p></div>
-                        <div><h1>Software<br> Engineering</h1><p>1 Year Knowledge</p></div>
+                        <div><h1>Html</h1><p>1 Year and 4 Months Knowledge</p></div>
+                        <div><h1>Css</h1><p>1 Year and 4 Months Knowledge</p></div>
+                        <div><h1>Javascript</h1><p>1 Year and 4 Months Knowledge</p></div>
+                        <div><h1>React </h1><p>4 Months Knowledge</p></div>
+                        <div><h1>Software<br> Engineering</h1><p>1 Year and 3 Months Knowledge</p></div>
                         <div><h1>Java</h1><p>1 Year Knowledge</p></div>
 
         </div>
@@ -62,7 +62,7 @@
                 </div>
                 <div class ="linha2">
                     <a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1 class="linha7">PROJECT T.I.</h1>
-                    <a href="https://github.com/Gabrilinard/Game" target="_blank"><img src="Imagens/Captura de Tela (2).png" alt="mapamental4" id="linha4"></a> <h1 class="linha8">Secret Word</h1>
+                    <a href="https://meek-basbousa-d48605.netlify.app" target="_blank"><img src="Imagens/Captura de Tela (2).png" alt="mapamental4" id="linha4"></a> <h1 class="linha8">Secret Word</h1>
                 </div>
             </div>
         </aside>
