--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             
             <div id="div3">
                 <h1>Nice to meet you! <br> I'am <b class="b1">Gabriel Linard</b></h1>
-                <p>Based in the Brazil, I'm a front-end developer passionate about building cute and cool web app that users love. I study software engineering at one of the best colleges in Piauí called ICEV and I'm a big fan of the area. I took some courses in the area and I have eight certificates. One of javascript, one of algorithms, four of HTML and CSS, one of Java POO, one of mysql. In search of more learning.</p>
+                <p>I live in Brazil and I am a 5th-semester Software Engineering student at iCev in Teresina, Piauí. I am passionate about the field and enjoy working with technologies such as HTML, CSS, JavaScript, React, Python, and Power BI. I have developed some websites and artificial intelligence solutions, including websites for extension projects and data analysis with Python using artificial intelligence for academic projects. In this portfolio, I highlight some of the projects I have developed and provide more information about myself.</p>
             </div>  
         </div>
     </header>
@@ -37,12 +37,12 @@
 
 
                 <div id="skills">
-                        <div><h1>Html</h1><p>1 Year and 4 Months Knowledge</p></div>
-                        <div><h1>Css</h1><p>1 Year and 4 Months Knowledge</p></div>
-                        <div><h1>Javascript</h1><p>1 Year and 4 Months Knowledge</p></div>
-                        <div><h1>React </h1><p>4 Months Knowledge</p></div>
-                        <div><h1>Software<br> Engineering</h1><p>1 Year and 3 Months Knowledge</p></div>
-                        <div><h1>Java</h1><p>1 Year Knowledge</p></div>
+                        <div><h1>Html</h1><p>2 Years Knowledge</p></div>
+                        <div><h1>Css</h1><p>2 Years Knowledge</p></div>
+                        <div><h1>Javascript</h1><p>2 Years Knowledge</p></div>
+                        <div><h1>React </h1><p>1 Year and 6 Months Knowledge</p></div>
+                        <div><h1>Python</h1><p>1 Year and 6 Months</p></div>
+                        <div><h1>Power BI</h1><p>1 Year Knowledge</p></div>
 
         </div>
 
@@ -53,16 +53,17 @@
                         <h1><b class="b3">Projects</b></h1>
                     </div>
             </div>
-
+            
 
             <div id="imagens">
                 <div class = "linha1">
-                    <a href="https://gabrilinard.github.io/projeto-medico/" target="_blank"><img src="Imagens/2023-06-21.png" alt="mapamental1" id="linha1"></a> <h1 class="linha5">MEDICAL STYLE WEBSITE</h1>
-                    <a href="https://gabrilinard.github.io/projeto-login/" target="_blank"><img src="Imagens/2023-06-26 (4).png" alt="mapamental2" id="linha2"></a> <h1 class="linha6">SIMULATOR WEBSITE WITH LOGINS</h1>
+                    <a href="https://github.com/Gabrilinard/SiteEsportivo" target="_blank"><img src="Imagens/Captura%20de%20Tela%20(3).png" alt="mapamental1" id="linha1"></a> <h1 class="linha5">SPORTS WEBSITE</h1>
+                    <a href="https://github.com/Gabrilinard/Synapsee" target="_blank"><img src="Imagens/Captura%20de%20Tela%20(28).png" alt="mapamental2" id="linha2"></a> <h1 class="linha6">TEA WEBSITE</h1>
+
                 </div>
                 <div class ="linha2">
                     <a href="https://pointtech.netlify.app/index.html?fbclid=PAAaZZodr4WVa3UFV11zAKF2R4lcocpOjFkRfwa9BFVnK6sBVaWjLQipJF3jU" target="_blank"><img src="Imagens/2023-06-27.png" alt="mapamental3" id="linha3"></a> <h1 class="linha7">PROJECT T.I.</h1>
-                    <a href="https://meek-basbousa-d48605.netlify.app" target="_blank"><img src="Imagens/Captura de Tela (2).png" alt="mapamental4" id="linha4"></a> <h1 class="linha8">Secret Word</h1>
+                    <a href="https://meek-basbousa-d48605.netlify.app" target="_blank"><img src="Imagens/Captura de Tela (2).png" alt="mapamental4" id="linha4"></a> <h1 class="linha8">SECRET WORD Game</h1>
                 </div>
             </div>
         </aside>
@@ -80,6 +81,7 @@
                         <a href="https://wa.me/+5586994273418" target="_blank"><img src="Imagens/wpp.png" alt="whatsapppng" style="background-color: white; padding: 2px; border-radius: 50%"></a>
                         <a href="https://instagram.com/gabrilinard?igshid=MzRlODBiNWFlZA==" target="_blank"><img src="Imagens/insta.png" alt="instapng" style="padding: 2px; background-color: rgba(255, 255, 255, 0.997); border-radius: 50%;"></a>
                     </div>
+
             </div>  
             <div class="footer">
                     <img src="Imagens/c2327102-eb9b-41d3-85e4-4618eca63b3a.jpg" alt="fotoextra" class="imgextra">
